--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "bcryptjs": "^2.4.3",
     "bootstrap": "^5.3.3",
     "lucide-react": "^0.453.0",
+    "primeflex": "^3.3.1",
+    "primeicons": "^7.0.0",
+    "primereact": "^10.8.4",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.5",
