--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@popperjs/core": "^2.11.8",
     "bcryptjs": "^2.4.3",
     "bootstrap": "^5.3.3",
+    "exceljs": "^4.4.0",
+    "file-saver": "^2.0.5",
     "lucide-react": "^0.453.0",
     "primeflex": "^3.3.1",
     "primeicons": "^7.0.0",
